--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,8 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "griffe>=1.5.5",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.5.50",
+    "mkdocstrings[python]>=0.27.0",
     "pytest>=8.3.4",
 ]
