--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "Michael Milton", email = "michael.r.milton@gmail.com" }
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 dependencies = [
     "docstring-parser>=0.16",
 ]
@@ -21,8 +21,12 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "griffe>=1.5.5",
+    "ipykernel>=6.29.5",
+    "ipython>=8.18.1",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.5.50",
     "mkdocstrings[python]>=0.27.0",
+    "nbclient>=0.10.2",
+    "nbformat>=5.10.4",
     "pytest>=8.3.4",
 ]
