--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.9"
 dependencies = [
     "docstring-parser>=0.16",
+    "typing-extensions>=4.12.2",
 ]
 
 [project.scripts]
